--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,13 @@
   "dependencies": {
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-scripts": "^2.1.1"
+    "react-scripts": "^2.1.1",
+    "axios": "^0.18.0",
+    "@material-ui/core": "^3.9.3",
+    "@material-ui/icons": "^3.0.2",
+    "reactn": "^1.0.0",
+    "chart.js": "^2.8.0",
+    "react-chartkick": "^0.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
