--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-scripts": "^2.1.1",
+    "react-router-dom": "^5.0.0",
     "axios": "^0.18.0",
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
