--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
+    "chart.js": "^2.8.0",
     "express": "^4.16.3",
-    "if-env": "^1.0.4"
+    "if-env": "^1.0.4",
+    "react": "^16.8.6",
+    "react-chartjs-2": "^2.7.6"
   }
 }
